Fix coordinate system conversion